@@ -1,5 +1,6 @@
-# Documentation for DWD12
+# Documentation for dwd12
 
+* [dwd12admin](dwd12admin.md)
 * [dwd12](dwd12.md)
 
-Generated for NH1 1.1n17 at 2022-11-05.
+Generated by NH1 1.3.1 at 2022-12-09.
